--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ authors = ["Thomas McNiven <hello@vevix.net>"]
 edition = "2018"
 
 [dependencies]
+ndarray = "0.12.1"
+rand = { version = "0.6", features = ["std"] }
